Fix gap issue

--- a/src/components/modal/v2/styles/components/_header.scss
+++ b/src/components/modal/v2/styles/components/_header.scss
@@ -31,6 +31,7 @@
         @include apiIframe {
             max-width: 100%;
             border-radius: 0;
+            transform: translate(-50%, -15px);
         }
     }
 
